src/snapshots/geometrid__polyomino__tests__X pentomino rectangles.snap
---
source: src/polyomino.rs
expression: rectangles
---
[
  {
    "north_west": {
      "x": -1,
      "y": 0
    },
    "width": 3,
    "height": 1
  },
  {
    "north_west": {
      "x": 0,
      "y": -1
    },
    "width": 1,
    "height": 1
  },
  {
    "north_west": {
      "x": 0,
      "y": 1
    },
    "width": 1,
    "height": 1
  }
]
