src/snapshots/geometrid__polyomino__tests__Y pentomino outline.snap
---
source: src/polyomino.rs
expression: outline
---
[
    PointRelative8 {
        x: -2,
        y: 0,
    },
    PointRelative8 {
        x: 0,
        y: 0,
    },
    PointRelative8 {
        x: 0,
        y: -1,
    },
    PointRelative8 {
        x: 1,
        y: -1,
    },
    PointRelative8 {
        x: 1,
        y: 0,
    },
    PointRelative8 {
        x: 2,
        y: 0,
    },
    PointRelative8 {
        x: 2,
        y: 1,
    },
    PointRelative8 {
        x: -2,
        y: 1,
    },
]
