src/snapshots/geometrid__polyomino__tests__Z tetromino outline.snap
---
source: src/polyomino.rs
expression: outline
---
[
    PointRelative {
        x: -1,
        y: -1,
    },
    PointRelative {
        x: 1,
        y: -1,
    },
    PointRelative {
        x: 1,
        y: 0,
    },
    PointRelative {
        x: 2,
        y: 0,
    },
    PointRelative {
        x: 2,
        y: 1,
    },
    PointRelative {
        x: 0,
        y: 1,
    },
    PointRelative {
        x: 0,
        y: 0,
    },
    PointRelative {
        x: -1,
        y: 0,
    },
]
